# checkin-count

./: .gitignore  .tmp_agg2.py  .tmp_agg_check.py  .tmp_debug_block.py  .tmp_dump_excel.py  .tmp_parse_check.py  README.md  eslint.config.js  index.html  main_dakaprocess.py  package.json  pnpm-lock.yaml  requirements.txt  selfcheck.py  tsconfig.node.json  vite.config.ts
.github/workflows/: windows-build.yml
app/: __init__.py  exporter.py  processor.py  ui_main.py
docs/: README_REWRITE.md  acceptance-checklist.md  architecture.md  assumptions.md  execution-plan.md  migration-report.md  performance-baseline.md  release.md  test-matrix.md
docs/spec/: business-rules.md  legacy-gap.md
scripts/: build-win.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: attendance_benchmark.rs
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: app_service.rs  dto.rs  mod.rs  notice_service.rs
src-tauri/src/commands/: export.rs  files.rs  mod.rs  preview.rs
src-tauri/src/domain/: aggregator.rs  attendance_schema.rs  block_detector.rs  error.rs  mod.rs  model.rs  notice_filter.rs  rules.rs  time_normalizer.rs  window_classifier.rs
src-tauri/src/infrastructure/: excel_reader.rs  export_csv.rs  export_xlsx.rs  exported_workbook_detector.rs  logging.rs  mod.rs  security.rs  summary_importer.rs
src-tauri/tests/: aggregator.rs  block_detector.rs  export.rs  notice_filter.rs  notice_regression.rs  parser_guard.rs  time_rules.rs
src/components/: AdvancedMenu.tsx  (+11 more)
(+16 files in other folders)
